--- a/css/style.css
+++ b/css/style.css
@@ -18,66 +18,57 @@ nav {
 	z-index: 2;
 }
 nav ul {
-	display: -ms-flexbox;
-	display: flex;
+	display: flex;	
+  justify-content: center;
 	max-width: 1280px;
-	list-style: none;
 	margin: 0 auto;
-	padding-right: 20px;
+	height: 80px;
+	list-style: none;	
+	padding-right: 20px;	
+	overflow: hidden;
 }
 nav ul li {
-	-ms-flex-preferred-size: 20%;
-	    flex-basis: 20%;	
-	-ms-flex-item-align: center;	
-	    -ms-grid-row-align: center;	
-	    align-self: center;
+  flex-basis: 15%;	
+  align-self: center;
+  display: inline-block;
 }
 nav ul li a {	
 	display: block;
-	margin: 20px;
-	padding: 15px 20px;
-	font-size: 20px;	  
-	color: #fff;
-	background-size: 200% auto;
-	box-shadow: 0 0 20px #aaa;
- 	border-radius: 10px;
+	padding: 10px 0;
+	font-size: 16px;
 	text-align: center;
 	text-decoration: none;
 	text-transform: uppercase;
+	color: #fff;
 	letter-spacing: 2px;
-	transition: .5s;	  	
+	transition: .3s;	
+	margin: 0 10px;  	
+	box-sizing: content-box;
 }
 nav ul li:first-child a {
-	margin: 5px 5px 1px 5px;
 	padding: 0;	
-	box-shadow: none;
+	margin: 0;
 }
-.btn-1 {
-	background-image: linear-gradient(-90deg, #b3b3ff 0%, #bebeff 51%, #ccccff 100%);
+nav ul li .btn-1:hover {
+	color: #c4bdff;
 }
-.btn-2 {
-  background-image: linear-gradient(-90deg, #9999ff 0%, #a6a6ff 51%, #b3b3ff 100%);
+nav ul li .btn-2:hover {
+  color: #957bff;
 }
-.btn-3 {
-  background-image: linear-gradient(-90deg, #8080ff 0%,  #8c8cff 51%, #9999ff 100%);
+nav ul li .btn-3:hover {
+  color: #7449ff;
 }
-.btn-4 {
-  background-image: linear-gradient(-90deg, #6666ff 0%, #7575ff 51%, #8080ff 100%);
+nav ul li .btn-4:hover{
+  color: #421eb2;
 }	
-nav ul li a:hover {  		
- 	background-position: right center;
- 	box-shadow: 0 0 25px #aaa;
-}
-nav ul li:first-child a:hover {
- 	box-shadow: none;
-}
 .minilogo {
 	display: none;
 }
 @media(max-width: 1024px) {
 	nav {	
 		position: fixed;
-		top: -110vh;
+		opacity: 0;
+		transition: .3s;
 	}
 	.minilogo {
 		display: block;
@@ -89,9 +80,9 @@ nav ul li:first-child a:hover {
 	.burger {		
 	 	position: fixed;
 		display: block;
-	 	top: 35px;
-	 	right: 35px; 	
-	 	width: 60px;
+	 	top: 20px;
+	 	right: 20px; 	
+	 	width: 50px;
 	 	height: 40px;
 	 	transition: .2s;
 	 	z-index: 10; 	
@@ -99,7 +90,7 @@ nav ul li:first-child a:hover {
 	.burger span {
 	 	position: absolute;
 	 	width: 100%;
-	 	height: 8px;
+	 	height: 7px;
 	 	background-color: #9595ea;
 	 	left: 0;
 	 	border-radius: 6px;
@@ -130,11 +121,7 @@ nav ul li:first-child a:hover {
 		transform: rotate(-90deg);
 	}
 	nav.active {
-		top: 0px;
-	}
-	nav ul li {			
-		-ms-flex-item-align: end;			
-		    align-self: flex-end;
+		opacity: 1;
 	}
 }
 @media(max-width: 870px) {
@@ -145,41 +132,22 @@ nav ul li:first-child a:hover {
 	.burger span {
 	 	height: 6px;
 	}
-	nav ul {
-		-ms-flex-direction: column;
-		    flex-direction: column;
+	nav {		
+	 	opacity: 0;	
+	 	height: 100vh;
 	}
-	nav ul li {
-		-ms-flex-preferred-size: 15%;
-		    flex-basis: 15%;	
-		-ms-flex-item-align: center;	
-		    -ms-grid-row-align: center;	
-		    align-self: center;
+	nav ul {
+		flex-direction: column;
+		height: 100vh;
+		padding-right: 0;
 	}
 	nav ul li a {	
-		margin: 10px;
-		padding: 10px 20px;
-		font-size: 16px;	  			  	
-	}
-	nav ul li:first-child a {
-		margin: 5px;
-	}
-	nav {		
-	 	top: -165vh;	
-	}
+		font-size: 20px;    	
+	}	
 }
 @media(max-width: 825px) and (orientation: landscape) {
-	nav ul {
-		height: 100vh;
-		padding: 0 0 40px 0;
-	}
-	nav ul li a {	
-		margin: 5px;
-		padding: 10px;
-		font-size: 12px;	  			  	
-	}
 	nav ul li:first-child a {
-		margin: -65px;
+		margin: -55px;
 		padding: 10px;
 		transform: scale(0.4);
 	}
@@ -194,16 +162,15 @@ nav ul li:first-child a:hover {
 		font-size: 18px;	  			  	
 	}
 	nav {		
-	 	top: -130vh;	
+	 	opacity: 0;	
 	}
 }
-
 /*header*/
 .welcome {
 	position: relative;
 	max-width: 1280px;
 	margin: 0 auto;
-	height: calc(100vh - 131px);
+	height: calc(100vh - 80px);
 	width: 100%;
 	background-image: url(../images/lavender1.jpg);
 	background-repeat: no-repeat;
@@ -214,29 +181,30 @@ nav ul li:first-child a:hover {
 }
 .welcome-wrap {
 	position: absolute;
-	height: calc(100vh - 131px);
+	height: calc(100vh - 80px);
 	width: 100%;
 	background-color: rgba(0, 0, 0, 0.6);
 }
 .welcome h1 {
 	font-family: 'Charmonman', cursive;
-	font-size: 90px;
+	font-size: 70px;
+	margin-top: 30px;
 	color: #9595ea;	
 	text-transform: capitalize; 
 	text-shadow: 0px 0px 1px #222;	
 }
 .welcome h1~h1 {
-	margin-top: -70px;
+	margin-top: -50px;
 }
 .welcome h2 {	
-	font-size: 48px;
-	margin: 20px 15px;
+	font-size: 40px;
+	margin: 40px 15px;
 	text-transform: uppercase;
 	color: #fff;
 	letter-spacing: 3px
 }
 .welcome p {
-	font-size: 40px;
+	font-size: 32px;
 	color: #bfbff2;
 	text-transform: uppercase;	
 }
@@ -245,12 +213,12 @@ nav ul li:first-child a:hover {
 	bottom: 4%;
 	left: 50%;
 	transform: translateX(-50%);
-	width: 60px;
-	height: 60px;
-	line-height: 60px;	
+	width: 40px;
+	height: 40px;
+	line-height: 40px;	
 	border-radius: 50%;
 	border-style: none;
-	font-size: 60px;
+	font-size: 40px;
 	color: #fff;
 	background-color: rgba(0, 0, 0, 0.5);
 	cursor: pointer;
@@ -280,18 +248,18 @@ nav ul li:first-child a:hover {
 		height: 100vh;
 	}
 	.welcome h1 {
-		margin-top: 50px;
-		font-size: 80px;
+		/*margin-top: 50px;*/
+		font-size: 60px;
 	}
 	.welcome h1~h1 {
-		margin-top: -60px;
+		margin-top: -40px;
 	}
 	.welcome h2 {	
 		margin: 30px 30px 60px;
-		font-size: 40px;
+		font-size: 30px;
 	}
 	.welcome p {
-		font-size: 34px;
+		font-size: 26px;
 	}
 	.welcome button.arrow-down:hover i {	
 		animation: none;
@@ -395,20 +363,20 @@ nav ul li:first-child a:hover {
 	transform: translateX(-50%);
 	width: 100%;
 	text-align: center;
-	font-size: 48px;
+	font-size: 32px;
 	letter-spacing: 6px;
 	text-transform: uppercase;
 	background-color: rgba(0, 0, 0, 0.5);
 	color: #fff;
 	z-index: 1;
-	padding: 30px;
+	padding: 20px;
 	animation: moveText 4s linear infinite;
 }
 div.arrow {	
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
-	font-size: 80px;
+	font-size: 60px;
 	color: #fff;
 	z-index: 1;
 	cursor: pointer;
@@ -464,10 +432,13 @@ div.arrow {
 }
 @media(max-width: 1024px) {
 	.banner-text h1 {		
-		font-size: 42px;	
+		font-size: 28px;	
 	}
 }
 @media(max-width: 870px) {
+	.banner-text h1 {		
+		font-size: 26px;	
+	}
 	.banner-image img {
 		display: none;
 	}
@@ -487,7 +458,7 @@ div.arrow {
 }
 @media(max-width: 640px) {
 	div.arrow {	
-		font-size: 60px;
+		font-size: 50px;
 	}
 	.arrow-left {	
 		margin-left: 20px;
@@ -496,7 +467,7 @@ div.arrow {
 		margin-right: 20px;
 	}
 	.banner-text h1 {		
-		font-size: 30px;	
+		font-size: 24px;	
 	}
 }
 @media(max-width: 360px) {
@@ -550,15 +521,15 @@ div.arrow {
 .contact .information .info .contact-icon {
 	flex-basis: 20%;
 	text-align: center;
-	font-size: 40px;
+	font-size: 30px;
 	color: #9595ea;
 }
 .contact .information .info .text {
 	flex-grow: 1;
-	font-size: 20px;	
+	font-size: 16px;	
 }
 .contact .information .info .text p.title {
-	font-size: 22px;
+	font-size: 18px;
 	font-weight: bold;
 	text-transform: uppercase;
 	letter-spacing: 2px;
@@ -673,7 +644,19 @@ div.arrow {
 /*.contact .info div {
 	flex-grow: 1;
 }*/
-
+/*map*/
+/*.contact .map {
+	position: relative;
+	top:0;
+	left:0;
+}
+.contact .map #map {
+	position: absolute;
+	top:0;
+	left:0;
+	width: 100%;
+	height: 100vh;
+}*/
 
 
 footer {
@@ -682,16 +665,19 @@ footer {
 }
 footer p {
 	padding: 20px;
-	font-size: 24px;
+	font-size: 20px;
 	color: #bfbff2;
 }
 @media(max-width: 825px) {
 	footer p {
-		font-size: 20px;
+		font-size: 18px;
 	}
 }
-@media(max-width: 425px) {
+@media(max-width: 640px) {
 	footer p {
 		font-size: 16px;
 	}
 }
+/*AIzaSyAzKHbV3ew6sYI92K99sKpLMHHIx3WUwnk*/
+/*Google Maps JavaScript API warning: InvalidKey*/
+/*Google Maps JavaScript API error: InvalidKeyMapError*/
