--- a/css/prefixed.css
+++ b/css/prefixed.css
@@ -23,10 +23,10 @@ nav ul {
 	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;	
-  -webkit-box-pack: center;	
-  -webkit-justify-content: center;	
-      -ms-flex-pack: center;	
-          justify-content: center;
+  -webkit-box-pack: end;	
+  -webkit-justify-content: flex-end;	
+      -ms-flex-pack: end;	
+          justify-content: flex-end;
 	max-width: 1280px;
 	margin: 0 auto;
 	height: 80px;
@@ -35,13 +35,13 @@ nav ul {
 	overflow: hidden;
 }
 nav ul li {
-  -webkit-flex-basis: 15%;
-      -ms-flex-preferred-size: 15%;
-          flex-basis: 15%;	
-  -webkit-align-self: center;	
-      -ms-flex-item-align: center;	
-              -ms-grid-row-align: center;	
-          align-self: center;
+	-webkit-flex-basis: 15%;
+	    -ms-flex-preferred-size: 15%;
+	        flex-basis: 15%;	
+	-webkit-align-self: center;	
+	    -ms-flex-item-align: center;	
+	            -ms-grid-row-align: center;	
+	        align-self: center;
   display: inline-block;
 }
 nav ul li a {	
@@ -60,7 +60,7 @@ nav ul li a {
 }
 nav ul li:first-child a {
 	padding: 0;	
-	margin: 0;
+	margin-left: -400px;
 }
 nav ul li .btn-1:hover {
 	color: #c4bdff;
@@ -84,6 +84,15 @@ nav ul li .btn-4:hover{
 		-webkit-transition: .3s;
 		transition: .3s;
 	}
+	nav ul {		
+	  -webkit-box-pack: center;		
+	  -webkit-justify-content: center;		
+	      -ms-flex-pack: center;		
+	          justify-content: center;
+	}
+	nav ul li:first-child a {	
+		margin: 0;
+}
 	.minilogo {
 		display: block;
 		position: relative;
@@ -163,10 +172,10 @@ nav ul li .btn-4:hover{
 	 	height: 100vh;
 	}
 	nav ul {
-		-webkit-box-orient: vertical;
-		-webkit-box-direction: normal;
-		-webkit-flex-direction: column;
-		    -ms-flex-direction: column;
+		-ms-flex-direction: column;
+		    -webkit-box-orient: vertical;
+		    -webkit-box-direction: normal;
+		    -webkit-flex-direction: column;
 		        flex-direction: column;
 		height: 100vh;
 		padding-right: 0;
@@ -176,13 +185,11 @@ nav ul li .btn-4:hover{
 	}	
 }
 @media(max-width: 825px) and (orientation: landscape) {
-	nav ul li:first-child a {
+	/*nav ul li:first-child a {
 		margin: -55px;
 		padding: 10px;
-		-webkit-transform: scale(0.4);
-		    -ms-transform: scale(0.4);
-		        transform: scale(0.4);
-	}
+		transform: scale(0.4);
+	}*/
 }
 @media(max-width: 420px) and (orientation: portrait) {
 	nav ul {
@@ -219,7 +226,7 @@ nav ul li .btn-4:hover{
 	background-color: rgba(0, 0, 0, 0.6);
 }
 .welcome h1 {
-	font-family: 'Charmonman', cursive;
+	font-family: 'La Belle Aurore', cursive;;
 	font-size: 70px;
 	margin-top: 30px;
 	color: #9595ea;	
@@ -264,10 +271,8 @@ nav ul li .btn-4:hover{
 .welcome button.arrow-down:hover {
 	background-color: rgba(0, 0, 0, 0.7);
 }
-.welcome button.arrow-down:hover i {
-	
-	-webkit-animation: arrow 1s linear infinite both;
-	
+.welcome button.arrow-down:hover i {	
+	-webkit-animation: arrow 1s linear infinite both;	
 	        animation: arrow 1s linear infinite both;
 }
 @-webkit-keyframes arrow {
@@ -582,29 +587,29 @@ div.arrow {
 .contact {
 	max-width: 1280px;
 	margin: 0 auto;
+	display: -ms-flexbox;
 	display: -webkit-box;
 	display: -webkit-flex;
-	display: -ms-flexbox;
 	display: flex;
-	height: 70vh;	
+	height: 80vh;	
 	color: #fff;
 }
 .contact .information {
 	position: relative;
 	top: 0;
 	left: 0;
+	display: -ms-flexbox;
 	display: -webkit-box;
 	display: -webkit-flex;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-webkit-flex-direction: column;
-	    -ms-flex-direction: column;
+	-ms-flex-direction: column;
+	    -webkit-box-orient: vertical;
+	    -webkit-box-direction: normal;
+	    -webkit-flex-direction: column;
 	        flex-direction: column;
-	-webkit-box-flex: 1;
-	-webkit-flex-grow: 1;
-	    -ms-flex-positive: 1;
+	-ms-flex-positive: 1;
+	    -webkit-box-flex: 1;
+	    -webkit-flex-grow: 1;
 	        flex-grow: 1;
 	background-image: url(../images/4.jpg);
 	background-repeat: no-repeat;	
@@ -613,21 +618,21 @@ div.arrow {
 }
 .contact .information .wrap {
 	position: absolute;
+	display: -ms-flexbox;
 	display: -webkit-box;
 	display: -webkit-flex;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-webkit-flex-direction: column;
-	    -ms-flex-direction: column;
+	-ms-flex-direction: column;
+	    -webkit-box-orient: vertical;
+	    -webkit-box-direction: normal;
+	    -webkit-flex-direction: column;
 	        flex-direction: column;
-	-webkit-box-flex: 1;
-	-webkit-flex-grow: 1;
-	    -ms-flex-positive: 1;
+	-ms-flex-positive: 1;
+	    -webkit-box-flex: 1;
+	    -webkit-flex-grow: 1;
 	        flex-grow: 1;
 	width: 100%;
-	height: 70vh;
+	height: 80vh;
 	padding: 0 30px;
 	background-color: rgba(0, 0, 0, 0.8);
 }
@@ -640,28 +645,28 @@ div.arrow {
 	letter-spacing: 2px;
 }
 .contact .information .info {
+	display: -ms-flexbox;
 	display: -webkit-box;
 	display: -webkit-flex;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-flex: 1;
-	-webkit-flex-grow: 1;
-	    -ms-flex-positive: 1;
+	-ms-flex-positive: 1;
+	    -webkit-box-flex: 1;
+	    -webkit-flex-grow: 1;
 	        flex-grow: 1;
 	padding: 10px;
 }
 .contact .information .info .contact-icon {
-	-webkit-flex-basis: 20%;
-	    -ms-flex-preferred-size: 20%;
+	-ms-flex-preferred-size: 20%;
+	    -webkit-flex-basis: 20%;
 	        flex-basis: 20%;
 	text-align: center;
 	font-size: 30px;
 	color: #9595ea;
 }
 .contact .information .info .text {
-	-webkit-box-flex: 1;
-	-webkit-flex-grow: 1;
-	    -ms-flex-positive: 1;
+	-ms-flex-positive: 1;
+	    -webkit-box-flex: 1;
+	    -webkit-flex-grow: 1;
 	        flex-grow: 1;
 	font-size: 16px;	
 }
@@ -672,8 +677,8 @@ div.arrow {
 	letter-spacing: 2px;
 }
 .contact .map {
-	-webkit-flex-basis: 60%;
-	    -ms-flex-preferred-size: 60%;
+	-ms-flex-preferred-size: 60%;
+	    -webkit-flex-basis: 60%;
 	        flex-basis: 60%;
 	background-color: #555;	
 } 
@@ -696,32 +701,32 @@ div.arrow {
 }
 @media (max-width: 870px) {
 	.contact {
-		-webkit-box-orient: vertical;
-		-webkit-box-direction: normal;
-		-webkit-flex-direction: column;
-		    -ms-flex-direction: column;
+		-ms-flex-direction: column;
+		    -webkit-box-orient: vertical;
+		    -webkit-box-direction: normal;
+		    -webkit-flex-direction: column;
 		        flex-direction: column;
 		height: 100vh;
 	}
 	.contact .information .info {
+		display: -ms-flexbox;
 		display: -webkit-box;
 		display: -webkit-flex;
-		display: -ms-flexbox;
 		display: flex;
-		-webkit-box-orient: vertical;
-		-webkit-box-direction: normal;
-		-webkit-flex-direction: column;
-		    -ms-flex-direction: column;
+		-ms-flex-direction: column;
+		    -webkit-box-orient: vertical;
+		    -webkit-box-direction: normal;
+		    -webkit-flex-direction: column;
 		        flex-direction: column;
-		-webkit-box-align: center;
-		-webkit-align-items: center;
-		    -ms-flex-align: center;
+		-ms-flex-align: center;
+		    -webkit-box-align: center;
+		    -webkit-align-items: center;
 		        align-items: center;
 		text-align: center;
 	}
 	.contact .map {
-		-webkit-flex-basis: 30%;
-		    -ms-flex-preferred-size: 30%;
+		-ms-flex-preferred-size: 30%;
+		    -webkit-flex-basis: 30%;
 		        flex-basis: 30%;
 	}
 }
@@ -730,8 +735,8 @@ div.arrow {
 		height: 200vh;
 	}
 	.contact .map {
-		-webkit-flex-basis: 50%;
-		    -ms-flex-preferred-size: 50%;
+		-ms-flex-preferred-size: 50%;
+		    -webkit-flex-basis: 50%;
 		        flex-basis: 50%;
 	}
 	.contact .information .wrap {
@@ -782,8 +787,8 @@ div.arrow {
 		height: 150vh;
 	}
 	.contact .map {
-		-webkit-flex-basis: 50vh;
-		    -ms-flex-preferred-size: 50vh;
+		-ms-flex-preferred-size: 50vh;
+		    -webkit-flex-basis: 50vh;
 		        flex-basis: 50vh;
 	}
 	.contact .information .wrap {
