--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ nav {
 }
 nav ul {
 	display: flex;	
-  justify-content: center;
+  justify-content: flex-end;
 	max-width: 1280px;
 	margin: 0 auto;
 	height: 80px;
@@ -28,8 +28,8 @@ nav ul {
 	overflow: hidden;
 }
 nav ul li {
-  flex-basis: 15%;	
-  align-self: center;
+	flex-basis: 15%;	
+	align-self: center;
   display: inline-block;
 }
 nav ul li a {	
@@ -47,7 +47,7 @@ nav ul li a {
 }
 nav ul li:first-child a {
 	padding: 0;	
-	margin: 0;
+	margin-left: -400px;
 }
 nav ul li .btn-1:hover {
 	color: #c4bdff;
@@ -70,6 +70,12 @@ nav ul li .btn-4:hover{
 		opacity: 0;
 		transition: .3s;
 	}
+	nav ul {		
+	  justify-content: center;
+	}
+	nav ul li:first-child a {	
+		margin: 0;
+}
 	.minilogo {
 		display: block;
 		position: relative;
@@ -137,7 +143,8 @@ nav ul li .btn-4:hover{
 	 	height: 100vh;
 	}
 	nav ul {
-		flex-direction: column;
+		-ms-flex-direction: column;
+		    flex-direction: column;
 		height: 100vh;
 		padding-right: 0;
 	}
@@ -146,11 +153,11 @@ nav ul li .btn-4:hover{
 	}	
 }
 @media(max-width: 825px) and (orientation: landscape) {
-	nav ul li:first-child a {
+	/*nav ul li:first-child a {
 		margin: -55px;
 		padding: 10px;
 		transform: scale(0.4);
-	}
+	}*/
 }
 @media(max-width: 420px) and (orientation: portrait) {
 	nav ul {
@@ -174,7 +181,6 @@ nav ul li .btn-4:hover{
 	width: 100%;
 	background-image: url(../images/lavender1.jpg);
 	background-repeat: no-repeat;
-	-webkit-background-size: cover;
 	background-size: cover; 
 	background-position: center;	
 	text-align: center; 
@@ -186,7 +192,7 @@ nav ul li .btn-4:hover{
 	background-color: rgba(0, 0, 0, 0.6);
 }
 .welcome h1 {
-	font-family: 'Charmonman', cursive;
+	font-family: 'La Belle Aurore', cursive;;
 	font-size: 70px;
 	margin-top: 30px;
 	color: #9595ea;	
@@ -228,8 +234,7 @@ nav ul li .btn-4:hover{
 .welcome button.arrow-down:hover {
 	background-color: rgba(0, 0, 0, 0.7);
 }
-.welcome button.arrow-down:hover i {
-	
+.welcome button.arrow-down:hover i {	
 	animation: arrow 1s linear infinite both;
 }
 @keyframes arrow {
@@ -479,17 +484,21 @@ div.arrow {
 .contact {
 	max-width: 1280px;
 	margin: 0 auto;
+	display: -ms-flexbox;
 	display: flex;
-	height: 70vh;	
+	height: 80vh;	
 	color: #fff;
 }
 .contact .information {
 	position: relative;
 	top: 0;
 	left: 0;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	flex-grow: 1;
+	-ms-flex-direction: column;
+	    flex-direction: column;
+	-ms-flex-positive: 1;
+	    flex-grow: 1;
 	background-image: url(../images/4.jpg);
 	background-repeat: no-repeat;	
 	background-position: center;
@@ -497,11 +506,14 @@ div.arrow {
 }
 .contact .information .wrap {
 	position: absolute;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	flex-grow: 1;
+	-ms-flex-direction: column;
+	    flex-direction: column;
+	-ms-flex-positive: 1;
+	    flex-grow: 1;
 	width: 100%;
-	height: 70vh;
+	height: 80vh;
 	padding: 0 30px;
 	background-color: rgba(0, 0, 0, 0.8);
 }
@@ -514,18 +526,22 @@ div.arrow {
 	letter-spacing: 2px;
 }
 .contact .information .info {
+	display: -ms-flexbox;
 	display: flex;
-	flex-grow: 1;
+	-ms-flex-positive: 1;
+	    flex-grow: 1;
 	padding: 10px;
 }
 .contact .information .info .contact-icon {
-	flex-basis: 20%;
+	-ms-flex-preferred-size: 20%;
+	    flex-basis: 20%;
 	text-align: center;
 	font-size: 30px;
 	color: #9595ea;
 }
 .contact .information .info .text {
-	flex-grow: 1;
+	-ms-flex-positive: 1;
+	    flex-grow: 1;
 	font-size: 16px;	
 }
 .contact .information .info .text p.title {
@@ -535,7 +551,8 @@ div.arrow {
 	letter-spacing: 2px;
 }
 .contact .map {
-	flex-basis: 60%;
+	-ms-flex-preferred-size: 60%;
+	    flex-basis: 60%;
 	background-color: #555;	
 } 
 @media (max-width: 1024px) {
@@ -557,17 +574,22 @@ div.arrow {
 }
 @media (max-width: 870px) {
 	.contact {
-		flex-direction: column;
+		-ms-flex-direction: column;
+		    flex-direction: column;
 		height: 100vh;
 	}
 	.contact .information .info {
+		display: -ms-flexbox;
 		display: flex;
-		flex-direction: column;
-		align-items: center;
+		-ms-flex-direction: column;
+		    flex-direction: column;
+		-ms-flex-align: center;
+		    align-items: center;
 		text-align: center;
 	}
 	.contact .map {
-		flex-basis: 30%;
+		-ms-flex-preferred-size: 30%;
+		    flex-basis: 30%;
 	}
 }
 @media (max-width: 870px) and (orientation: landscape){
@@ -575,7 +597,8 @@ div.arrow {
 		height: 200vh;
 	}
 	.contact .map {
-		flex-basis: 50%;
+		-ms-flex-preferred-size: 50%;
+		    flex-basis: 50%;
 	}
 	.contact .information .wrap {
 		height: 100vh;
@@ -625,7 +648,8 @@ div.arrow {
 		height: 150vh;
 	}
 	.contact .map {
-		flex-basis: 50vh;
+		-ms-flex-preferred-size: 50vh;
+		    flex-basis: 50vh;
 	}
 	.contact .information .wrap {
 		height: 100vh;
