--- a/css/prefixed.css
+++ b/css/prefixed.css
@@ -19,13 +19,13 @@ nav {
 	z-index: 2;
 }
 nav ul {
+	display: -ms-flexbox;
 	display: -webkit-box;
 	display: -webkit-flex;
-	display: -ms-flexbox;
 	display: flex;	
-  -webkit-box-pack: end;	
-  -webkit-justify-content: flex-end;	
-      -ms-flex-pack: end;	
+  -ms-flex-pack: end;	
+      -webkit-box-pack: end;	
+      -webkit-justify-content: flex-end;	
           justify-content: flex-end;
 	max-width: 1280px;
 	margin: 0 auto;
@@ -35,12 +35,12 @@ nav ul {
 	overflow: hidden;
 }
 nav ul li {
-	-webkit-flex-basis: 15%;
-	    -ms-flex-preferred-size: 15%;
+	-ms-flex-preferred-size: 15%;
+	    -webkit-flex-basis: 15%;
 	        flex-basis: 15%;	
-	-webkit-align-self: center;	
-	    -ms-flex-item-align: center;	
-	            -ms-grid-row-align: center;	
+	-ms-flex-item-align: center;	
+	    -ms-grid-row-align: center;	
+	    -webkit-align-self: center;	
 	        align-self: center;
   display: inline-block;
 }
@@ -85,9 +85,9 @@ nav ul li .btn-4:hover{
 		transition: .3s;
 	}
 	nav ul {		
-	  -webkit-box-pack: center;		
-	  -webkit-justify-content: center;		
-	      -ms-flex-pack: center;		
+	  -ms-flex-pack: center;		
+	      -webkit-box-pack: center;		
+	      -webkit-justify-content: center;		
 	          justify-content: center;
 	}
 	nav ul li:first-child a {	
@@ -290,6 +290,7 @@ nav ul li .btn-4:hover{
 }
 @media(max-width: 1024px) {
 	.welcome {
+		margin-top: 0;
 		height: 100vh;
 	}
 	.welcome-wrap {
@@ -397,23 +398,94 @@ nav ul li .btn-4:hover{
 	display: -ms-flexbox;
 	display: flex;
 }
-.about-us div.text {
-	-webkit-box-flex: 1;
-	-webkit-flex-grow: 1;
-	    -ms-flex-positive: 1;
-	        flex-grow: 1;	
+.about-us div.text {	
+	-webkit-flex-basis: 60%;	
+	    -ms-flex-preferred-size: 60%;	
+	        flex-basis: 60%;
 }
-.about-us div.text h1, .about-us div.text p, .about-us img  {
+.about-us div.text h1, .about-us div.text p, .about-us div.image  {
 	margin: 50px;
 }
 .about-us div.text p {
 	line-height: 150%;
+	text-align: justify;
 }
-.about-us img {
-	-webkit-flex-basis: 50%;
-	    -ms-flex-preferred-size: 50%;
-	        flex-basis: 50%;
+.about-us div.image {
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;	
+  background-image: url(../images/9.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
+@media(max-width: 1024px) {
+	.about-us div.text h1, .about-us div.text p {
+		margin: 30px 50px;
+	}
+}
+@media (max-width: 768px) and (orientation: portrait) {}
+@media (max-width: 425px) and (orientation: portrait) {}
+
+@media(max-width: 820px) and (orientation: landscape) {
+	.about-us {		
+		height: 100vh;
+	}
+}
+@media(max-width: 670px) and (orientation: landscape) {
+	.about-us div.text h1, .about-us div.text p, .about-us div.image {
+		margin: 20px;
+	}
+	.about-us div.text h1 {
+		font-size: 16px;
+	}
+	.about-us div.text p {
+		line-height: 130%;
+		font-size: 12px;
+	}
+}
+@media(max-width: 820px) and (orientation: portrait) {
+	.about-us {
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-webkit-flex-direction: column;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		height: 80vh;
+	}
+	.about-us div.text {	
+		-webkit-flex-basis: 40%;	
+		    -ms-flex-preferred-size: 40%;	
+		        flex-basis: 40%;
+	}
+	.about-us div.image {
+		position: relative; 
+		top: 0;
+		left: 50%;
+		margin: 20px 0;
+		-webkit-transform: translateX(-50%);
+		    -ms-transform: translateX(-50%);
+		        transform: translateX(-50%);
+		width: 400px;
+	}
+}
+@media(max-width: 420px) and (orientation: portrait) {
+	.about-us {
+		height: 100vh;
+	}
+	.about-us div.text h1 {
+		font-size: 16px;
+	}
+	.about-us div.text p {
+		line-height: 120%;
+		font-size: 12px;
+	}
+	.about-us div.image {
+		width: 200px;
+	}
+}
+
 
 /*banner*/
 .banner {	 
@@ -421,7 +493,8 @@ nav ul li .btn-4:hover{
 	max-width: 1280px;
 	margin: 0 auto;
 	width: 100%;
-	height: 100vh;
+	height: -webkit-calc(100vh - 80px);
+	height: calc(100vh - 80px);
 	overflow: hidden;		
 }
 .banner-image img {	
