--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,10 @@ nav {
 	z-index: 2;
 }
 nav ul {
+	display: -ms-flexbox;
 	display: flex;	
-  justify-content: flex-end;
+  -ms-flex-pack: end;	
+      justify-content: flex-end;
 	max-width: 1280px;
 	margin: 0 auto;
 	height: 80px;
@@ -28,8 +30,11 @@ nav ul {
 	overflow: hidden;
 }
 nav ul li {
-	flex-basis: 15%;	
-	align-self: center;
+	-ms-flex-preferred-size: 15%;
+	    flex-basis: 15%;	
+	-ms-flex-item-align: center;	
+	    -ms-grid-row-align: center;	
+	    align-self: center;
   display: inline-block;
 }
 nav ul li a {	
@@ -71,7 +76,8 @@ nav ul li .btn-4:hover{
 		transition: .3s;
 	}
 	nav ul {		
-	  justify-content: center;
+	  -ms-flex-pack: center;		
+	      justify-content: center;
 	}
 	nav ul li:first-child a {	
 		margin: 0;
@@ -240,6 +246,7 @@ nav ul li .btn-4:hover{
 }
 @media(max-width: 1024px) {
 	.welcome {
+		margin-top: 0;
 		height: 100vh;
 	}
 	.welcome-wrap {
@@ -343,18 +350,81 @@ nav ul li .btn-4:hover{
 	height: 400px;
 	display: flex;
 }
-.about-us div.text {
-	flex-grow: 1;	
+.about-us div.text {	
+	flex-basis: 60%;
 }
-.about-us div.text h1, .about-us div.text p, .about-us img  {
+.about-us div.text h1, .about-us div.text p, .about-us div.image  {
 	margin: 50px;
 }
 .about-us div.text p {
 	line-height: 150%;
+	text-align: justify;
 }
-.about-us img {
-	flex-basis: 50%;
+.about-us div.image {
+  flex-grow: 1;	
+  background-image: url(../images/9.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
+@media(max-width: 1024px) {
+	.about-us div.text h1, .about-us div.text p {
+		margin: 30px 50px;
+	}
+}
+@media (max-width: 768px) and (orientation: portrait) {}
+@media (max-width: 425px) and (orientation: portrait) {}
+
+@media(max-width: 820px) and (orientation: landscape) {
+	.about-us {		
+		height: 100vh;
+	}
+}
+@media(max-width: 670px) and (orientation: landscape) {
+	.about-us div.text h1, .about-us div.text p, .about-us div.image {
+		margin: 20px;
+	}
+	.about-us div.text h1 {
+		font-size: 16px;
+	}
+	.about-us div.text p {
+		line-height: 130%;
+		font-size: 12px;
+	}
+}
+@media(max-width: 820px) and (orientation: portrait) {
+	.about-us {
+		flex-direction: column;
+		height: 80vh;
+	}
+	.about-us div.text {	
+		flex-basis: 40%;
+	}
+	.about-us div.image {
+		position: relative; 
+		top: 0;
+		left: 50%;
+		margin: 20px 0;
+		transform: translateX(-50%);
+		width: 400px;
+	}
+}
+@media(max-width: 420px) and (orientation: portrait) {
+	.about-us {
+		height: 100vh;
+	}
+	.about-us div.text h1 {
+		font-size: 16px;
+	}
+	.about-us div.text p {
+		line-height: 120%;
+		font-size: 12px;
+	}
+	.about-us div.image {
+		width: 200px;
+	}
+}
+
 
 /*banner*/
 .banner {	 
@@ -362,7 +432,7 @@ nav ul li .btn-4:hover{
 	max-width: 1280px;
 	margin: 0 auto;
 	width: 100%;
-	height: 100vh;
+	height: calc(100vh - 80px);
 	overflow: hidden;		
 }
 .banner-image img {	
